hphp/hack/test/typecheck/needs_concrete/needs_concrete_4.php.exp
ERROR: File "needs_concrete_4.php", line 14, characters 6-7:
Cannot call `A::m1` (a `<<__NeedsConcrete>>` method). It is expecting a concrete receiver but `A` is not concrete. (Typing[4490])
  File "needs_concrete_4.php", line 5, characters 26-27:
  Declaration is here
